[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/AI/AIControllerGrounded.gd" type="Script" id=1]

[node name="AIControllerGrounded" type="Node2D"]
script = ExtResource( 1 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -15, -4 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 15.5, -3 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24
